Closed Bug 1750142 Opened 3 years ago Closed 3 years ago

window.screen.orientation.lock('any') causes crash.

Categories

(GeckoView :: General, defect)

Unspecified
All
defect

Tracking

(firefox98 fixed)

RESOLVED FIXED
98 Branch
Tracking Status
firefox98 --- fixed

People

(Reporter: m_kato, Assigned: m_kato)

References

(Blocks 1 open bug)

Details

Crash Data

Attachments

(2 files)

This is the reason that testing/web-platform/tests/screen-orientation/lock-basic.html crashes with dom.screenorientation.allow-lock=true

Blocks: 1744125

We should return rejected promise instead of nullptr to make simple.

Crash Signature: [@ mozilla::hal_sandbox::HalParent::RecvLockScreenOrientation ]
Pushed by malexandru@mozilla.com: https://hg.mozilla.org/mozilla-central/rev/52496c100eb0 Don't return nullptr for LockScreenOrientation. r=geckoview-reviewers,calu https://hg.mozilla.org/mozilla-central/rev/0c855935ddc4 Support screen.orientation.lock('any') on GeckoView backend. r=geckoview-reviewers,calu
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 98 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: