Bug 1750142 - Don't return nullptr for LockScreenOrientation. r=geckoview-reviewers,calu

We should return rejected promise instead of `nullptr` to make simple.

Differential Revision: https://phabricator.services.mozilla.com/D135980